--- a/template/main.tex
+++ b/template/main.tex
@@ -19,8 +19,8 @@
 \title{令和元年度 卒業論文\\
 ドリルキングアンセムの研究}
 
-\author{鳥"留噛男 \\
-China Institute of Technology}
+\author{鳴海　和真 \\
+Chiba Institute of Technology}
 
 \date{2017年2月x日}
 
