--- a/template/main.tex
+++ b/template/main.tex
@@ -17,12 +17,12 @@
 \begin{document}
 % 表紙
 \title{令和元年度 卒業論文\\
-ドリルキングアンセムの研究}
+単眼カメラSLMAの研究}
 
 \author{鳴海　和真 \\
 Chiba Institute of Technology}
 
-\date{2017年2月x日}
+\date{2020年1月X日}
 
 \maketitle
 
