--- a/template/main.tex
+++ b/template/main.tex
@@ -16,31 +16,23 @@
 
 \begin{document}
 % 表紙
-\title{令和元年度 卒業論文\\
-単眼カメラSLMAの研究}
+\title{2019年度 卒業論文\\
+単眼カメラSLAMを完遂する環境要件\\
+Environmental requirements to complete monocular camera SLAM}
 
-\author{鳴海　和真 \\
-Chiba Institute of Technology}
+\author{千葉工業大学　先進工学部　未来ロボティクス学科\\
+学籍番号 16C1096\\
+鳴海　和真}
 
-\date{2020年1月X日}
+
+
+
+\date{2020年2月7日}
 
 \maketitle
 
 %%% 但し書き等 %%%
-この論文は、読んだあと自動的に消滅する。
 \clearpage
-
-%%% 献辞 %%%
-% D論、あるいは誰かを亡くしたときの卒論、修論等で
-% 配偶者や配偶者の予定となる人の名前は覚悟をもって書くこと
-\thispagestyle{empty}
-\vfil
-\ \\
-\vspace{15em}
-\begin{center}
-	{\Large 最愛の京成線に捧ぐ }
-\end{center}
-% 献辞をかかない場合はここまでコメントアウト
 
 \include{preface}
 
