--- a/template/introduction.tex
+++ b/template/introduction.tex
@@ -1,10 +1,17 @@
 \chapter{序論}
 
-上田\index{うえだ@上田}は、いろいろ書いているが、あまり引用されない。
-例えば、\cite{上田2015gihyo,ueda2015,上田2015jsai}
-がある。
+\section{背景}
 
-\ref{chap:purpose}章で目的を述べる。
+Simultaneous Localization and Mapping（以下, SLAM）は、自己位置推定と環境地図の生成を同時に行う技術であり、工場で稼働する無人運搬車や自動車の自動運転、ロボット掃除機といった自律行動をするロボットに活用されている。
+カメラ映像からSLAMを行うものをVisual SLAMという。中でも、単眼カメラSLAMはVisual SLAMを単眼カメラのみで行う。単眼カメラSLAMはVisual SLAMの中で最も安価かつ小型で消費電力を抑えられることが長所である。
+
+\section{問題}
+
+単眼カメラSLAMの問題点として、空間把握をカメラ画像に依存するためにエッジや模様のない壁面といった場所では特徴点検出が難しいことが挙げられる。
+
+\section{目的}
+
+本研究では、単眼カメラSLAMを完遂することのできる環境要件を調査することを目的とする。これによりSLAM導入のハードルが下がり、活用の幅が広がることを期待する。
 
 % dvipdfmxとhereのテスト
 %\begin{figure}[H]
