--- a/template/preface.tex
+++ b/template/preface.tex
@@ -1,13 +1,3 @@
 \chapter*{謝辞}\addcontentsline{toc}{chapter}{謝辞}
 
-和文だとうしろに持っていくことが多いのですが、
-私は前のほうが好きです。
-
-
-南武線に感謝します。
-
-横須賀線に感謝します。
-
-総武線に感謝します。
-
-京葉線に吹き付ける横風に感謝します。
+ 本研究を進めるにあたり、ご指導を頂いた卒業論文指導教員の上田隆一准教授に感謝いたします。
