--- a/template/main.tex
+++ b/template/main.tex
@@ -48,14 +48,16 @@ Environmental requirements to complete\\
 \pagenumbering{arabic}
 
 \include{introduction}
-\include{purpose}
+%\include{purpose}
 \include{method}
+\include{test}
 \include{conclusion}
+
 
 \appendix
 \include{appendix}
 
-%%% 参考文献 %%%
+%%%参考文献%%%
 % よほどのことが無い限りet al.は使わないことにしましょう
 \bibliographystyle{jualpha}
 \bibliography{./references}
