--- a/template/main.tex
+++ b/template/main.tex
@@ -10,6 +10,7 @@
 \usepackage{amssymb}
 \usepackage[dvipdfmx]{graphicx} %dvipdfmxはjpgやpngの張り込みのために使用
 
+
 \makeindex
 
 \pagenumbering{roman}
@@ -53,9 +54,8 @@ Environmental requirements to complete\\
 \include{test}
 \include{conclusion}
 
+%\appendix
 
-\appendix
-\include{appendix}
 
 %%%参考文献%%%
 % よほどのことが無い限りet al.は使わないことにしましょう
