--- a/template/introduction.tex
+++ b/template/introduction.tex
@@ -2,16 +2,19 @@
 
 \section{背景}
 
-Simultaneous Localization and Mapping（以下, SLAM）は、自己位置推定と環境地図の生成を同時に行う技術であり、工場で稼働する無人運搬車や自動車の自動運転、ロボット掃除機といった自律行動をするロボットに活用されている。
-カメラ映像からSLAMを行うものをVisual SLAMという。中でも、単眼カメラSLAMはVisual SLAMを単眼カメラのみで行う。単眼カメラSLAMはVisual SLAMの中で最も安価かつ小型で消費電力を抑えられることが長所である。
+Simultaneous Localization and Mapping（以下, SLAM）は、自己位置推定と環境地図の生成を同時に行う技術である。SLAMは、工場で稼働する無人運搬車や自動車の自動運転、ロボット掃除機といった自律行動をするロボットに活用されている。中でも、カメラ映像からSLAMを行うものをVisual SLAMという。単眼カメラSLAMはVisual SLAMを単眼カメラのみで行う。単眼カメラSLAMはVisual SLAMの中で最も安価かつ小型で消費電力を抑えられることが長所である。
 
 \section{問題}
 
-単眼カメラSLAMの問題点として、空間把握をカメラ画像に依存するためにエッジや模様のない壁面といった場所では特徴点検出が難しいことが挙げられる。
+単眼カメラSLAMには、空間把握をカメラ画像に依存するために、エッジや模様のない環境に対して特徴点検出ができなくなるという問題が存在する。このような場合にはSLAMが中断される。この問題の解決策として、IMUやRGB-Dといったセンサを併用することによる方法が一般的である。しかし、この方法ではセンサの高価格化、大型化および消費電力の増加によって前述した単眼カメラSLAMの長所を活かすことができない。
 
 \section{目的}
 
-本研究では、単眼カメラSLAMを完遂することのできる環境要件を調査することを目的とする。これによりSLAM導入のハードルが下がり、活用の幅が広がることを期待する。
+単眼カメラSLAMを中断されることなく完遂することのできる環境要件を調査することを目的とする。ここでの環境要件とは単眼カメラSLAMが中断されないために最低限必要とされる特徴とする。本目的の達成によってロボットに用いられるセンサのコスト低下、軽量化されることによりSLAM導入のハードルを低下させることができると言える。
+
+\section{本論文の構成}
+
+本論文では、２章で提案手法を述べ、３章で実験の方法と結果を示し、４章で結論を述べる。
 
 % dvipdfmxとhereのテスト
 %\begin{figure}[H]
