--- a/template/main.tex
+++ b/template/main.tex
@@ -18,13 +18,13 @@
 \begin{document}
 % 表紙
 \title{2019年度 卒業論文\\
+\vspace{\baselineskip}
 単眼カメラSLAMを完遂する環境要件\\
 Environmental requirements to complete\\
  monocular camera SLAM }
-
-\author{千葉工業大学　先進工学部　未来ロボティクス学科\\
+\author{千葉工業大学 先進工学部 未来ロボティクス学科\\
 学籍番号 16C1096\\
-鳴海　和真}
+鳴海 和真}
 
 
 
