--- a/template/preface.tex
+++ b/template/preface.tex
@@ -1,3 +1,3 @@
 \chapter*{謝辞}\addcontentsline{toc}{chapter}{謝辞}
 
- 本研究を進めるにあたり、ご指導を頂いた卒業論文指導教員の上田隆一准教授に感謝いたします。
+ 本研究を進めるにあたり、ご指導を頂いた卒業論文指導教員の上田隆一准教授に感謝致します。また本研究に協力して頂いた、上田研究室の皆様に感謝致します。
