--- a/template/conclusion.tex
+++ b/template/conclusion.tex
@@ -1,10 +1,6 @@
 \chapter{結論}
 
-得られた知見を定量的に述べましょう。
-予稿等では箇条書きにしたほうがよいのですが、
-卒論の場合はどうせ長くなるので箇条書きは不要です。
-
-素敵な結果になった。
-
+単眼カメラSLAMを完遂するために必要な特徴点マッチング数を絞り込む手法を提案した。同様の手順を行うことで単眼カメラSLAMを完遂できない環境を最小限のマーキングによって改善可能である。
+課題点として、本研究の実験方法はトラッキングが開始されることを前提にしている点が挙げられる。実験において棚に該当する特徴点検出が容易な物体を隣接していない環境では同じ手法では不十分である。この課題の解決には新たな実験条件を考案する必要がある。
 
 
