--- a/template/introduction.tex
+++ b/template/introduction.tex
@@ -2,8 +2,7 @@
 
 \section{背景}
 
-Simultaneous Localization and Mapping（以下, SLAM）は、自己位置推定と環境地図の生成を同時に行う技術である。SLAMは、工場で稼働する無人運搬車や自動車の自動運転、ロボット掃除機といった自律行動をするロボットに活用されている。中でも、カメラ映像からSLAMを行うものをVisual SLAMという。単眼カメラSLAMはVisual SLAMを単眼カメラのみで行う。単眼カメラSLAMはVisual SLAMの中で最も安価かつ小型で消費電力を抑えられることが長所である。
-
+Simultaneous Localization and Mapping（以下, SLAM）は、自己位置推定と環境地図の生成を同時に行う技術である。SLAMは、工場で稼働する無人運搬車や自動車の自動運転、ロボット掃除機といった自律行動をするロボットに活用されている\cite{Kondo2019}。中でも、カメラ映像からSLAMを行うものをVisual SLAMという。単眼カメラSLAMはVisual SLAMを単眼カメラのみで行う。単眼カメラSLAMはVisual SLAMの中で最も安価かつ小型で消費電力を抑えられることが長所である\cite{Artal2017}。
 \section{問題}
 
 単眼カメラSLAMには、空間把握をカメラ画像に依存するために、エッジや模様のない環境に対して特徴点検出ができなくなるという問題が存在する。このような場合にはSLAMが中断される。この問題の解決策として、IMUやRGB-Dといったセンサを併用することによる方法が一般的である。しかし、この方法ではセンサの高価格化、大型化および消費電力の増加によって前述した単眼カメラSLAMの長所を活かすことができない。
