--- a/template/method.tex
+++ b/template/method.tex
@@ -2,7 +2,7 @@
 
 \section{問題設定}
 
-今回は、倉庫等特定の環境で稼働するロボットを想定する。予め単眼カメラSLAMを行うロボットの補助のために環境改善が可能であることとする。ここで、環境への影響を最小限に抑えて単眼カメラSLAMが中断する環境を改善する条件を実験により調査する。
+本研究では倉庫等特定の環境で稼働するロボットを想定し、予め単眼カメラSLAMを行うロボットの補助のために環境改善が可能であることとする。ここで、環境への影響を最小限に抑えて単眼カメラSLAMが中断する環境を改善する条件を実験により調査する。
 
 \section{解決方法}
 
