--- a/template/main.tex
+++ b/template/main.tex
@@ -17,11 +17,14 @@
 
 \begin{document}
 % 表紙
-\title{2019年度 卒業論文\\
+\title{平成31年度 卒業論文\\
 \vspace{\baselineskip}
 単眼カメラSLAMを完遂する環境要件\\
+\vspace{10pt}
+\fontsize{15pt}{20pt}\selectfont
 Environmental requirements to complete\\
- monocular camera SLAM }
+\fontsize{15pt}{20pt}\selectfont 
+monocular camera SLAM\\ }
 \author{千葉工業大学 先進工学部 未来ロボティクス学科\\
 学籍番号 16C1096\\
 鳴海 和真}
