--- a/template/references.bib
+++ b/template/references.bib
@@ -14,6 +14,31 @@ journal = "Universidad de Zaragona",
 pages = "19",
 year = 2017
 }
+i
+@article{Hujiyosi2011,
+author = "{\noop{ふじよし}}藤吉弘亘　and  安倍満",
+title = "局所勾配抽出技術－SHIFT以降のアプローチ－",
+journal = "精密工学会誌",
+year = 2011,
+volume = 77,
+number = 12,
+pages = "1109-1112"
+}
+
+@article{Artal22017,
+author = "Raúl Mur Artal and  Juan D. Tardos",
+title = "{ORB-SLAM2: an Open-source SLAM System for Monocular, Stereo and RGB-D Cameras}",
+journal = "IEEE Transactions on Robotics",
+year = 2017
+}
+i
+@article{Artal32017,
+author = "Raúl Mur Artal",
+title = "{Real-Time Accurate Visual SLAM with Place Recognition}",
+journal = "Universidad de Zaragona",
+pages = "19",
+year = 2017
+
 
 @inproceedings{likhachev2002,
 author = "Maxim Likhachev and Sven Koenig",
